--- a/WhereTheRecipeAt/Base.lproj/Main.storyboard
+++ b/WhereTheRecipeAt/Base.lproj/Main.storyboard
@@ -4,51 +4,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
-            <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="hkv-vC-hdc">
-                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="wel-QM-3ZG"/>
-                                </connections>
-                            </searchBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="hkv-vC-hdc" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="8Vd-3t-hmU"/>
-                            <constraint firstItem="hkv-vC-hdc" firstAttribute="leading" secondItem="jyV-Pf-zRb" secondAttribute="leading" id="9Py-tH-2mx"/>
-                            <constraint firstItem="hkv-vC-hdc" firstAttribute="trailing" secondItem="jyV-Pf-zRb" secondAttribute="trailing" id="9sN-S3-JhD"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="xxz-Jo-Xee"/>
-                    <connections>
-                        <outlet property="searchDisplayController" destination="nLS-fm-Qbh" id="7Fe-0Y-2DD"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="nLS-fm-Qbh">
-                    <connections>
-                        <outlet property="delegate" destination="vXZ-lx-hvc" id="uV0-ar-Ipn"/>
-                        <outlet property="searchBar" destination="hkv-vC-hdc" id="T2N-WZ-9Kb"/>
-                        <outlet property="searchContentsController" destination="vXZ-lx-hvc" id="S83-8s-6Um"/>
-                        <outlet property="searchResultsDataSource" destination="vXZ-lx-hvc" id="z1T-Av-NSC"/>
-                        <outlet property="searchResultsDelegate" destination="vXZ-lx-hvc" id="Z8G-FU-VLI"/>
-                    </connections>
-                </searchDisplayController>
-            </objects>
-            <point key="canvasLocation" x="1053" y="363"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="xJt-r5-mrF">
             <objects>
@@ -60,12 +15,60 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="Nji-NQ-xcf"/>
+                        <segue destination="b1F-dB-rkH" kind="relationship" relationship="rootViewController" id="62U-ph-gMw"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jh7-g2-ABi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="241" y="363"/>
+        </scene>
+        <!--HomePage-->
+        <scene sceneID="wM6-5U-yGx">
+            <objects>
+                <tableViewController title="HomePage" id="b1F-dB-rkH" customClass="HomePageTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Ckx-sM-3E2">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="eoV-mm-SBv">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="b1F-dB-rkH" id="82b-Rl-cfD"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="HAt-GR-mmX">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HAt-GR-mmX" id="FXd-jF-m3n">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="b1F-dB-rkH" id="CrU-x5-3ZN"/>
+                            <outlet property="delegate" destination="b1F-dB-rkH" id="28u-wY-FLg"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="WhereTheRecipeAt" id="jPE-sj-m7V"/>
+                    <connections>
+                        <outlet property="searchBar" destination="eoV-mm-SBv" id="Yj0-4U-pc0"/>
+                        <outlet property="searchDisplayController" destination="dsP-hR-6y9" id="nph-ra-aFH"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hlN-C2-Of6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="dsP-hR-6y9">
+                    <connections>
+                        <outlet property="delegate" destination="b1F-dB-rkH" id="vob-qb-Rs7"/>
+                        <outlet property="searchBar" destination="eoV-mm-SBv" id="tPi-ZY-3BI"/>
+                        <outlet property="searchContentsController" destination="b1F-dB-rkH" id="laY-y0-zMx"/>
+                        <outlet property="searchResultsDataSource" destination="b1F-dB-rkH" id="wGt-x1-rcX"/>
+                        <outlet property="searchResultsDelegate" destination="b1F-dB-rkH" id="09o-Ja-cky"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1007" y="363"/>
         </scene>
     </scenes>
 </document>
