--- a/WhereTheRecipeAt/Base.lproj/Main.storyboard
+++ b/WhereTheRecipeAt/Base.lproj/Main.storyboard
@@ -86,10 +86,10 @@
         <scene sceneID="wM6-5U-yGx">
             <objects>
                 <tableViewController title="HomePage" id="b1F-dB-rkH" customClass="HomePageTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Ckx-sM-3E2">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="Ckx-sM-3E2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" id="eoV-mm-SBv">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -99,37 +99,34 @@
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="HAt-GR-mmX">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IngredientCell" id="HAt-GR-mmX">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HAt-GR-mmX" id="FXd-jF-m3n">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="b1F-dB-rkH" id="CrU-x5-3ZN"/>
                             <outlet property="delegate" destination="b1F-dB-rkH" id="28u-wY-FLg"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="WhereTheRecipeAt" id="jPE-sj-m7V"/>
+                    <navigationItem key="navigationItem" title="WhereTheRecipeAt" id="jPE-sj-m7V">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="D7t-Bi-Scx">
+                            <connections>
+                                <action selector="addIngredient:" destination="b1F-dB-rkH" id="vbd-0W-r4M"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="searchBar" destination="eoV-mm-SBv" id="Yj0-4U-pc0"/>
-                        <outlet property="searchDisplayController" destination="dsP-hR-6y9" id="nph-ra-aFH"/>
                         <segue destination="yOJ-D6-dxY" kind="show" identifier="goToCollection" id="hnA-3b-FRU"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hlN-C2-Of6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="dsP-hR-6y9">
-                    <connections>
-                        <outlet property="delegate" destination="b1F-dB-rkH" id="vob-qb-Rs7"/>
-                        <outlet property="searchBar" destination="eoV-mm-SBv" id="tPi-ZY-3BI"/>
-                        <outlet property="searchContentsController" destination="b1F-dB-rkH" id="laY-y0-zMx"/>
-                        <outlet property="searchResultsDataSource" destination="b1F-dB-rkH" id="wGt-x1-rcX"/>
-                        <outlet property="searchResultsDelegate" destination="b1F-dB-rkH" id="09o-Ja-cky"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="975" y="491"/>
+            <point key="canvasLocation" x="605" y="481"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Mvc-gn-lNY">
