--- a/WhereTheRecipeAt/Base.lproj/Main.storyboard
+++ b/WhereTheRecipeAt/Base.lproj/Main.storyboard
@@ -69,9 +69,6 @@
                                     <constraint firstItem="IG7-Zr-S3T" firstAttribute="leading" secondItem="vv3-rk-AcS" secondAttribute="leading" id="WuM-6F-vMB"/>
                                 </constraints>
                                 <size key="customSize" width="241" height="237"/>
-                                <connections>
-                                    <segue destination="xty-1b-oa7" kind="modal" identifier="goToRecipe" id="ld6-dv-OFW"/>
-                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -80,6 +77,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Recipes" id="kzh-fN-ADr"/>
+                    <connections>
+                        <segue destination="xty-1b-oa7" kind="presentation" identifier="goToRecipe" id="FZU-e4-VqP"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6YH-KC-qqc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -106,8 +106,8 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3N-AD-Xdp">
-                                <rect key="frame" x="69" y="198" width="463" height="359"/>
+                            <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="18" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3N-AD-Xdp">
+                                <rect key="frame" x="69" y="158" width="463" height="399"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -115,12 +115,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="NjJ-Mp-Ra6" firstAttribute="trailing" secondItem="u3N-AD-Xdp" secondAttribute="trailing" id="4aP-YE-vG6"/>
-                            <constraint firstItem="u3N-AD-Xdp" firstAttribute="top" secondItem="NjJ-Mp-Ra6" secondAttribute="bottom" constant="78" id="Lbi-X1-I8L"/>
+                            <constraint firstItem="u3N-AD-Xdp" firstAttribute="leading" secondItem="NjJ-Mp-Ra6" secondAttribute="leading" id="9Zv-FA-20X"/>
+                            <constraint firstItem="6hs-Ow-fcj" firstAttribute="top" secondItem="u3N-AD-Xdp" secondAttribute="bottom" constant="43" id="Cu3-3N-FT2"/>
                             <constraint firstItem="NjJ-Mp-Ra6" firstAttribute="leading" secondItem="rbV-H4-ZKt" secondAttribute="leadingMargin" constant="53" id="Mtt-r6-X7n"/>
-                            <constraint firstItem="NjJ-Mp-Ra6" firstAttribute="leading" secondItem="u3N-AD-Xdp" secondAttribute="leading" id="PnC-yH-0XN"/>
                             <constraint firstItem="NjJ-Mp-Ra6" firstAttribute="centerX" secondItem="rbV-H4-ZKt" secondAttribute="centerX" id="TeQ-us-LX4"/>
-                            <constraint firstItem="6hs-Ow-fcj" firstAttribute="top" secondItem="u3N-AD-Xdp" secondAttribute="bottom" constant="43" id="aok-6R-z5H"/>
+                            <constraint firstItem="u3N-AD-Xdp" firstAttribute="top" secondItem="NjJ-Mp-Ra6" secondAttribute="bottom" constant="38" id="cHJ-H0-SWi"/>
+                            <constraint firstItem="u3N-AD-Xdp" firstAttribute="trailing" secondItem="NjJ-Mp-Ra6" secondAttribute="trailing" id="mTd-rl-uuh"/>
                             <constraint firstItem="NjJ-Mp-Ra6" firstAttribute="top" secondItem="5aL-Js-Nv5" secondAttribute="bottom" constant="35" id="wk5-6p-wyo"/>
                         </constraints>
                     </view>
